--- a/latex/metadata-guideline.tex
+++ b/latex/metadata-guideline.tex
@@ -4,7 +4,7 @@
 \usepackage[T1]{fontenc}
 
 
-\title{Guideline for planning, performing, documenting and archiving a measurement project in structural engineering research}
+\title{Planning, performing, documenting and archiving measurement projects in structural engineering research}
 \author{Gunnstein T. Frøseth}
 \date{}
 \begin{document}
@@ -17,18 +17,20 @@
 
 
 \section{Introduction}
-Master students, PhD candidates and other researchers will most likely
-have to conduct a measurement project at some point in their career.  The objective of a measurement project is to obtain data that supports a hypothesis.  There are two essential components to \emph{the data} obtained in such a measurement project: \emph{data points} and \emph{metadata}.
+Students, researchers and professors in civil and structural engineering field are generally required to perform several measurement projects during their career.  The objective of a measurement project is to obtain data that supports a hypothesis or improves the understanding of the world around us.  Most often the data produced in these measurement projects are acquired, analyzed and reported within a relatively short timeframe in which the researcher has control (fresh memory) of the measurement set up and environment that the project was performed in.  The researcher then continues on to the next project while the data obtained in the previous measurement project is left on some hard drive.  And metadata, such as sensor placement, objective of the project and hardware used in data acquisition, are distributed on hand written notes placed in a drawer at the office.
 
-\paragraph{Data points} is the actual reading from a sensor, e.g. the acceleration from an accelerometer, the strain from a strain gage or the temperature from a thermometer.  This is the first (and only?) component of data that most people think of when they hear \emph{data}.
+A major issue then arises when the researcher either have to revisit the data for further analysis himself or share the data with a fellow reseachers for further investigation.  \emph{What was the orientation of that accelerometer?}  \emph{Was the thermocouple placed above or below deck?}  \emph{What was the gage factor of this strain gage?}  \emph{Which harddrive did I store the data on?!}  Oftentimes, these questions can not be answered because it was never documented properly in the first place or the relevant information is lost due to improper archiving and lack of organization.
+
+
+There are two essential components to \emph{the data} obtained in such a measurement project: \emph{data points} and \emph{metadata}.
+
+\paragraph{Data points} is the reading from a sensor, e.g. the acceleration from an accelerometer, the strain from a strain gage or the temperature from a thermocouple.  This is the component of data that most people think of when they hear \emph{data}.
 
 \paragraph{Metadata} is data about data points.  Type, sensitivity, position and orientation of an accelerometer that is used to obtain accelerations are all examples of metadata.  This is the component of data that is most often missing when you retrieve data from a fellow researcher or from a previous measurement project stashed on an old harddrive.
 
+In order to analyse and make sense of \emph{the data} it is essential that both the data points and the metadata available.
 
-In order to analyse and make sense of \emph{the data} it is essential that both components
-Without
 
-The data produced in these measurement projects are typically acquired, analyzed and reported within a relatively short timeframe  in which the researcher has control (fresh memory) of the measurement set up and environment that the project was performed in, perhaps distributed on hand written notes and short files on the current working directory.  The researcher then continues on to the next project while the data and metadata obtained in the previous project is left on some directory on some hard drive.
 
 These measurement projects produce data which is invaluable to the education of structural engineers and advancement of the current state of the art.  Ideally, data  Typically, measurement projects performed by one researcher will produce data which the researcher subsequently analyzes and ``archives''.
 
